[add] users詳細ページ、編集ページ

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -47,22 +47,35 @@
 </div>
 
 
-<div class="row  text-center">
-  <div class="mt-3 col-md-6">
-    <a href="#" class="btn-flat-vertical-border mt-3">ファンクラブを作る</a>
-  </div>
+<div class="text-center">
+  <%= link_to 'ファンクラブを作る', makefanclub_path, class: "btn-flat-vertical-border mt-3" %>
 
-  <div class="mt-3 col-md-6">
-
-    <a href="#" class="btn-flat-vertical-border mt-3">ファンクラブを探す</a>
-  </div>
+  <a href="#" class="btn-flat-vertical-border mt-3">ファンクラブを作る</a>
 </div>
+
+
+<h2 class="font4">新規ファンクラブ</h2>
 
 <div class="sample">
 <ul>
-<li>要素1</li>
-<li>要素2</li>
-<li>要素3</li>
+  <li >
+    <a href="#"><img src="/assets/02.jpg" alt style="width: 100%;"></a>
+  </li>
+  <li>
+    <img src="/assets/02.jpg" alt style="width: 100%;">
+  </li>
+  <li>
+    <img src="/assets/02.jpg" alt style="width: 100%;">
+  </li>
+  <li>
+    <img src="/assets/02.jpg" alt style="width: 100%;">
+  </li>
+  <li>
+    <img src="/assets/02.jpg" alt style="width: 100%;">
+  </li>
+  <li>
+    <img src="/assets/02.jpg" alt style="width: 100%;">
+  </li>
 </ul>
 </div>
 
