--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -15,12 +15,13 @@
 }
 
 .font3{
+  font-weight: bold;
     font-size: 25px;
 }
 
 .container{
     overflow: hidden;
-    width: 960px;
+    width: 1200px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -30,16 +31,48 @@
    
   }
 
+/* home/about.html.erb */
+/* ボタン１ */
+.btn-flat-vertical-border {
+  position: relative;
+  display: inline-block;
+  font-weight: bold;
+  padding: 1.5em 5em;
+  text-decoration: none;
+  border-left: solid 4px #668ad8;
+  border-right: solid 4px #668ad8;
+  color: #668ad8;
+  background: #e1f3ff;
+  transition: .4s;
+}
+
+.btn-flat-vertical-border:hover {
+  background: #668ad8;
+  color: #FFF;
+}
+
+
+
+  // 横並びスライド
   .sample ul{
-    display: flex;
-    overflow-x: scroll;
-    margin: 0;	
-    padding: 0;
+    padding: 0px;
+    overflow-x: auto;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
   }
+
   .sample li{
-    min-width: 40%;
-    margin: 10px;	
-    padding: 0;
-    list-style: none;
+    display: inline-block;
+    width: 30%;
+    height: 300px;
+    margin: 16px;
+    padding: 7px;
+    background: #e1f3ff;
   }
   
+  .font4{
+    font-weight: bold;
+    font-size: 25px;
+    margin: 50px 0px 10px 20px;
+}
+
