--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,37 @@
-<%= @user.email %>
+<div class="text-right"><%= link_to "編集する", edit_user_path %></div>
+<div class="text-center">
+  <ul class="list-inline" style="width: 1200px;">
+    <li class="list-inline-item">
+
+      <div class="mt-5"><%= image_tag @user.image.variant(combine_options:{gravity: :center, resize:"440x440^", crop:"440x440+0+0"}).processed %></div>
+      
+      <div class="name-font"><%= @user.name %><div>
+    </li>
+    <li class="list-inline-item">
+      <div class="name-font"><%= "プロフィール#{@user.profile}" %><div>
+      <div class="name-font"><%= "年齢#{@user.age}" %><div>
+      <div class="name-font"><%= "性別#{@user.gender}" %><div>
+      <div class="name-font"><%= "地域#{@user.area}" %><div>
+    </li>
+  </ul>
+
+</div>
+
+<div class="container bg-white">
+    <ul class="nav nav-tabs mb-3 nav-justified" id="myTab" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">ファンクラブ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">お気に入り投稿</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">参加イベント</a>
+      </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
+      <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+      <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+    </div>
+</div>
