--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,7 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn btn-outline-light" %></li>
-          <li class="nav-item"><%= link_to current_user.name, "users/#{current_user.id}", class: "btn btn-outline-light" %></li>
+          <li class="nav-item"><%= link_to current_user.name, user_path(current_user.id), class: "btn btn-outline-light" %></li>
         <% else %>
           <li class="nav-item"><%= link_to '新規登録', new_user_session_path, class: 'nav-link' %></li>
           <li class="nav-item"><%= link_to 'ログイン', new_user_session_path, class: 'nav-link' %></li>
