--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,3 +6,53 @@
     font-size: 30px;
 }
 
+.table-ul {
+    background-color: #668ad8;
+    display: table;
+    table-layout: fixed;
+    text-align: center;
+    width: 100%;
+    margin: {
+      top: 1px;
+      bottom: 1px;
+    }
+  }
+  .table-ul li {
+    border-right: 1px solid #fff;
+    display: table-cell;
+    vertical-align: middle;
+  }
+
+  .table-ul li:last-child {
+    border-right: 0;
+  }
+
+  .table-ul li a {
+    color: #fff;
+    display: block;
+    font-size: 18px;
+    text-decoration: none;
+    padding: 30px 0px;
+  }
+
+  .table-ul li a:hover {
+    background-color: #3b60b1;
+  }
+
+  .table-ul li.current a {
+    background-color: #0f2b69;
+  }
+
+
+.team-name{
+    font-size: 100px;
+    font-family: 'Noto Serif JP', serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Reggae One', cursive;
+    
+}
+ 
+.prfile{
+    
+    background-color: #668ad8;
+}
