--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_with(model:[@user, @member], method: :post) do |f| %>
   <div class="form-group">
-    <%= f.label :member, '名前' %>
-    <%= f.text_field :member %>
+    <%= f.label :name, '名前' %>
+    <%= f.text_field :name %>
   </div>
   <div class="form-group">
   <%= f.label :profile, '自己紹介' %>
