--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,5 +1,5 @@
 <div class="prfile text-center">
-    <a><%= @member.member %></a>
+    <a><%= @member.name %></a>
     <h2><%= @member.profile %></h2>
     <%= image_tag @member.image.variant(combine_options:{gravity: :center, resize:"1200x600^", crop:"1200x600+0+0"}).processed %>
 </div>
