[update] membre, post 編集、削除機能追加

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,2 +1,14 @@
-<h1>Members#edit</h1>
-<p>Find me in app/views/members/edit.html.erb</p>
+<%= form_with(model:[@user, @member], method: :patch) do |f| %>
+  <div class="form-group">
+    <%= f.label :name, '名前' %>
+    <%= f.text_field :name %>
+  </div>
+  <div class="form-group">
+  <%= f.label :profile, '自己紹介' %>
+    <%= f.text_area :profile %>
+  </div>
+  <div>
+    <%= f.file_field :image %><br>
+  </div>
+  <%= f.submit %>
+<% end %>
