--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -2,4 +2,9 @@
     <a><%= @member.name %></a>
     <h2><%= @member.profile %></h2>
     <%= image_tag @member.image.variant(combine_options:{gravity: :center, resize:"1200x600^", crop:"1200x600+0+0"}).processed %>
+
+  <% if current_user.admin? %>
+    <%= link_to 'このメッセージを削除する', user_member_path(@user, @member), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+    <%= link_to 'このメッセージを編集する', edit_user_member_path(@user, @member) %>
+  <% end %>
 </div>
