--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
       <%= link_to "プロフィール", @user, class: "" %>
     </li>
     <li>
-      <a class="" data-toggle="tab" href="#home">Photos</a>
+      <%= link_to "ブログ", user_posts_path(@user), class: "" %>
     </li>
     <li>
       <%= link_to "Schedule", "/", class: "" %>
