--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require simple_calendar
  *= require_tree .
  *= require_self
  */
@@ -35,3 +36,11 @@ body {
     width: 100%;
   }
 
+/* symple_calendar */
+.year1 {
+  font-size: 40px;
+}
+
+.month1 {
+  font-size: 60px;
+}
