--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -56,3 +56,53 @@
     
     background-color: #668ad8;
 }
+
+
+
+.member {
+	display: flex;
+  flex-wrap: wrap;
+  margin: 25px;
+}
+
+
+.card1 {
+  display: inline-block;
+  margin: 25px auto;
+  width: 250px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px #ccc;
+}
+.card-img1 {
+  border-radius: 5px 5px 0 0;
+  max-width: 100%;
+  height: auto;
+}
+.card-content1 {
+  padding: 20px;
+}
+.card-title1 {
+  font-size: 20px;
+  margin-bottom: 5px;
+  text-align: left;
+  color: #333;
+}
+.card-text1 {
+  color: #777;
+  font-size: 14px;
+  line-height: 1.5;
+}
+.card-link1 {
+  text-align: center;
+  border-top: 1px solid #eee;
+  padding: 20px;
+}
+.card-link1 a {
+  text-decoration: none;
+  color: #0bd;
+  margin: 0 10px;
+}
+.card-link1 a:hover {
+  color: #0090aa;
+}
