--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
       <%= link_to "スケジュール", user_events_path(@user), class: "" %>
     </li>
     <li>
-      <%= link_to "Contact", "/", class: "" %>
+      <%= link_to "動画", user_videos_path(@user), class: "" %>
     </li> 
     <li>
       <%= link_to "Contact", "/", class: "" %>
@@ -23,13 +23,32 @@
   
 <!- メンバー一覧 ->
   
-  <% @user.posts.each do |post| %>
-    <div class="card border-dark mb-3 mx-2 " style="">
-     <%= link_to user_post_path(@user, post), class: " text-dark" do %>
-       <div class="card-header"><%= post.title %></div>
-       <div class="card-body">
-       <h4 class="card-title text-center"><%= image_tag(post.image.variant(gravity: :center, resize:"640x640^").processed, class: "img-fluid") %></h4>
-       </div>
-     <% end %>
-  </div>
+<div class="container" style="">
+  <% @user.posts.reverse_each do |post| %>
+    <% if post.event? %>
+      <section class="card">
+        <%= link_to user_post_path(@user, post), class: " text-dark" do %>
+        <img class="card-img" src="" alt="">
+        <div class="card-content">
+          <h1 class="card-title"><%= post.title %></h1>
+          <p class="card-text">WebデザインやWebサイト制作、最新のWeb業界情報などを紹介していくサイト。</p>
+        </div>
+        <% end %>
+      </section>
+    
+    <% else %>
+      <section class="card">
+        <%= link_to user_post_path(@user, post), class: " text-dark" do %>
+        <div class="card-img"><%= image_tag(post.image.variant(gravity: :center).processed, class: "img-fluid") %></div>
+        <div class="card-content">
+          <h1 class="card-title"><%= post.title %></h1>
+          <p class="card-text">WebデザインやWebサイト制作、最新のWeb業界情報などを紹介していくサイト。</p>
+        </div>
+        <% end %>
+      </section>
+    <% end %>
+
+   
   <% end %>
+</div>
+
