--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<% if @user.admin? %> 
+<% if !@user.admin? %> 
   <div class="row">
     <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
