--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200&family=Oswald:wght@700&family=Reggae+One&display=swap" rel="stylesheet">
 
  <% if @user.admin? %> 
   <%= image_tag @user.image.variant(combine_options:{gravity: :center, resize:"1200x600^", crop:"1200x600+0+0"}).processed %>
@@ -21,16 +19,14 @@
     </li> 
   </ul>
 
-  <div class="h1 text-center team-name">
-    <%= @user.name %>
-  </div>
 
-  <div class="container">
-    <div class="prfile text-center">
-      <a><%= "ABOUT #{@user.name}" %></a>
-      <h2><%= @user.profile %></h2>
+
+
+    <div class="text-center">
+      <div class="name-font"><%= "ABOUT #{@user.name}" %></div>
+      <div class="profile"><%= @user.profile %></div>
     </div>
-  </div>
+ 
 
   <% if current_page?(current_user) %>
     <div class="text-right"><%= link_to "メンバーを追加する", new_user_member_path(@user) %></div>
@@ -85,8 +81,22 @@
         </li>
       </ul>
       <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...
+        
+        </div>
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+          <% current_user.like_posts.reverse_each do |post| %>
+              <section class="card">
+                
+                <div class="card-img"><%= image_tag(post.image.variant(gravity: :center).processed, class: "img-fluid") %></div>
+                <div class="card-content">
+                  <h1 class="card-title"><%= post.title %></h1>
+                  <p class="card-text">WebデザインやWebサイト制作、最新のWeb業界情報などを紹介していくサイト。</p>
+                </div>
+              </section>
+       
+          <% end %>
+        </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
       </div>
   </div>
