--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,13 +5,13 @@
 .font1{
    font-size: 22px;
    font-weight: bold;
-   border-bottom: thick double #668ad8;
+   border-bottom: thick double #741c9c;
 }
 
 .font2{
     font-size: 27px;
     font-weight: bold;
-    border-bottom: thick double #668ad8;
+    border-bottom: thick double #741c9c;
 }
 
 .font3{
@@ -19,14 +19,9 @@
     font-size: 25px;
 }
 
-.container{
-    overflow: hidden;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+
   .swiper-wrapper{
-    
+    max-height: 600px;
     max-width: 1200px; 
    
   }
@@ -39,15 +34,15 @@
   font-weight: bold;
   padding: 1.5em 5em;
   text-decoration: none;
-  border-left: solid 4px #668ad8;
-  border-right: solid 4px #668ad8;
-  color: #668ad8;
-  background: #e1f3ff;
+  border-left: solid 4px #741c9c;
+  border-right: solid 4px #741c9c;
+  color: #741c9c;
+  background: #f6e4ff;
   transition: .4s;
 }
 
 .btn-flat-vertical-border:hover {
-  background: #668ad8;
+  background: #741c9c;
   color: #FFF;
 }
 
