--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,1 @@
-$("#likes_buttons_<%= post.id %>").html("<%= j(render partial: 'likes/like', locals: {user: @user, post: post}) %>");
+$("#likes_buttons_<%= @post.id %>").html("<%= j(render partial: 'likes/like', locals: {post: @post}) %>");
