--- a/app/views/posts/event.html.erb
+++ b/app/views/posts/event.html.erb
@@ -6,10 +6,10 @@
     <li>
       <%= link_to "ブログ", user_posts_path(@user), class: "" %>
     </li>
-    <li>
+    <li class="current">
       <%= link_to "スケジュール", event_user_posts_path(@user), class: "" %>
     </li>
-    <li class="current">
+    <li>
       <%= link_to "動画", user_videos_path(@user), class: "" %>
     </li> 
     <li>
@@ -17,15 +17,18 @@
     </li> 
   </ul>
 
-  <% if @user.id == current_user.id %>
-    <div class="text-right"><%= link_to "メンバーを追加する", new_user_post_path(@user) %></div>
-  <% end %>
-  
-<!- メンバー一覧 ->
-  
-  <% @user.videos.each do |video| %>
-    <div class="text-center"><%= video.title %></div>
-    <div class="text-center">
-    <iframe width="1120" height="630" src="https://www.youtube.com/embed/<%= video.youtube_url%>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<% if @user.id == current_user.id %>
+  <%= link_to '日記をかく', new_user_post_path %>
+<% end %>
+
+<%= month_calendar events: @events do |date, events| %>
+  <%= date.day %>
+  <% events.each do |event| %>
+    <div>
+      <%= link_to event.title, user_post_path(@user, event) %>
     </div>
   <% end %>
+<% end %>
+
