--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,19 @@
 
-<div class='text-center'><%= @post.title %></div>
-<div class='text-center'><%= image_tag(@post.image.variant(gravity: :center, resize:"640x640^").processed, class: "img-fluid") %></div>
-<div class='text-center'><%= @post.body %></div>
+<% if @post.event? %>
+
+<% else %>
+  <div class='text-center'><%= @post.title %></div>
+  <div class='text-center'><%= image_tag(@post.image.variant(gravity: :center, resize:"640x640^").processed, class: "img-fluid") %></div>
+  <div class='text-center'><%= @post.body %></div>
 
   <% if current_user.admin? %> 
     <%= link_to 'このメッセージを削除する', user_post_path(@user, @post), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
     <%= link_to 'このメッセージを編集する', edit_user_post_path(@user, @post) %>
   <% end %>
-  
+  <div id="likes_buttons_<% @post.id %>">
+    <%= render partial: "likes/like", locals: {post: @post} %>
+  </div>
+
   <div class='block text-center mt-5'>
     <%= form_with(model:[@user, @post, @comment], method: :post) do |f| %>
       <%= f.text_field :content %>
@@ -22,5 +28,6 @@
       </p>
       
       <hr>
-     <% end %>
+      <% end %>
   </div>
+<% end %>
