--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
  *= require_tree .
  *= require_self
  */
+ @import "slick-theme";
+ @import "slick"; 
 
  html, body {
   font-family: "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", "MS PMincho", serif;
@@ -24,7 +26,7 @@ body {
 }
 
 .container{
-  background-color: #fdfdff;
+  background-color: #f1f1f1;
   overflow: hidden;
   width: 1200px;
   margin-left: auto;
@@ -34,7 +36,7 @@ body {
 /* navbar */
 
 .navbar-nav{
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .navbar{
@@ -49,7 +51,7 @@ body {
 
   #sbox2{
     
-  height:39px;
+  height:38px;
   width: 300px;
   padding:0 10px; 
 
@@ -69,7 +71,7 @@ body {
   font-size:20px;/*アイコンサイズ*/
   }
   #sbtn5:hover{
-  color:#e57fff;
+  color:#f1f1f1;
   }
 
 #sbtn3{
@@ -83,6 +85,36 @@ body {
   font-size:20px;/*アイコンサイズ*/
 }
 
+#sbtn6{
+  position:relative; 
+  left:-33px;/*アイコン左右の位置調整*/
+  top:3px;
+  background:none;
+  color: #741c9c;
+  border:none;
+  font-size:17px;/*アイコンサイズ*/
+}
+
+#sbtn7{
+  
+  position:relative; 
+  left:-15px;/*アイコン左右の位置調整*/
+  top:3px;
+  background:none;
+  color: #741c9c;
+  border:none;
+  font-size:17px;/*アイコンサイズ*/
+}
+
+.sub-menu1 {
+  position: absolute;
+  width: -50px;
+  background: #0bd;
+  top: 30px;
+  opacity: 0;
+  
+  transition: .5s;
+}
   
 /*ここまでnavbar*/
   
@@ -112,3 +144,4 @@ body {
 .month1 {
   font-size: 60px;
 }
+
