--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,7 +9,7 @@
 }
 
 .font2{
-    font-size: 27px;
+    font-size: 40px;
     font-weight: bold;
     border-bottom: thick double #741c9c;
 }
@@ -28,6 +28,22 @@
 
 /* home/about.html.erb */
 /* ボタン１ */
+
+.button1 {
+    list-style: none;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+
+}
+
+.button1 li{
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+
+
 .btn-flat-vertical-border {
   position: relative;
   display: inline-block;
@@ -67,7 +83,61 @@
   
   .font4{
     font-weight: bold;
-    font-size: 25px;
-    margin: 50px 0px 10px 20px;
+    font-size: 35px;
+    
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    width: 1120px;
+    border-bottom: thick double #741c9c;
 }
 
+
+.member {
+	display: flex;
+  flex-wrap: wrap;
+  margin: 25px;
+}
+
+
+.card2 {
+  display: inline-block;
+  margin: 25px auto;
+  width: 350px;
+  height: 320px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px #ccc;
+}
+.card-img2 {
+  border-radius: 5px 5px 0 0;
+  max-width: 100%;
+  height: auto;
+}
+.card-content1 {
+  padding: 20px;
+}
+.card-title1 {
+  font-size: 20px;
+  margin-bottom: 5px;
+  text-align: left;
+  color: #333;
+}
+.card-text1 {
+  color: #777;
+  font-size: 14px;
+  line-height: 1.5;
+}
+.card-link1 {
+  text-align: center;
+  border-top: 1px solid #eee;
+  padding: 20px;
+}
+.card-link1 a {
+  text-decoration: none;
+  color: #0bd;
+  margin: 0 10px;
+}
+.card-link1 a:hover {
+  color: #0090aa;
+}
