--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 
-  <nav class="navbar navbar-expand-sm navbar-ligth border-bottom border-3 border-primary" style="background-color:#fdfdff; ">
+  <nav class="navbar navbar-expand-sm navbar-ligth border-bottom border-3 border-primary" style="background-color:#f1f1f1; ">
     <div class="navbar-brand"><%= link_to "Navbar", root_path %></div>
     <!-- 横幅が狭い時に出るハンバーガーボタン -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -11,14 +11,19 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
         <li class="nav-item"><%= link_to '探す', root_path, class: 'btn btn-outline-primary mr-1' %></li>
-        <li>
-          <form id="form2" class="d-flex mx-0">
-            <input id="sbox2" class="form-control me-sm-2" type="text" placeholder="Search">
-            <button type="submit" id="sbtn2"><i class="fas fa-search"></i></button>
-          </form>
-        </li>
+  
           <li  class="nav-item">
           <li ><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn btn-outline-light" %></li>
+          <li id="sbtn6" class="nav-item">
+            <%= link_to user_path(current_user.id) do %>
+              <i class="far fa-envelope fa-2x"></i>
+            <% end %>
+          </li>
+          <li id="sbtn7" class="nav-item">
+            <%= link_to user_path(current_user.id) do %>
+              <i class="far fa-bell fa-2x"></i>
+            <% end %>
+          </li>
           <li id="sbtn3" class="nav-item">
             <%= link_to user_path(current_user.id) do %>
               <i class="fas fa-user-circle fa-2x"></i>
