--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,13 +18,26 @@
   </ul>
 
   <% if @user.id == current_user.id %>
-    <div class="text-right"><%= link_to "メンバーを追加する", new_user_post_path(@user) %></div>
+    <div class="text-center mt-3">
+      <%= link_to new_user_post_path(@user) do %>
+        <i class="fas fa-plus-circle fa-4x plus-icon"></i>
+      <% end %>
+    </div>
   <% end %>
+
+  <div class="text-right">
+    <%= search_form_for @search, url: user_posts_path do |f| %>
+      <%= f.search_field :title_or_body_cont, class: 'form-control me-sm-2', id: "submit-form1"%>
+      <%= f.button :type => "submit", id: 'submit-btn1' do %>
+        <i class='fas fa-search'></i>
+      <% end %>
+    <% end %>
+  </div>
   
-<!- メンバー一覧 ->
+<!- post一覧 ->
   
 <div class="container" style="">
-  <% @posts.reverse_each do |post| %>
+  <% @results.reverse_each do |post| %>
     <% if post.event? %>
       <section class="card">
         <%= link_to user_post_path(@user, post), class: " text-dark" do %>
