--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,38 @@
-    <table>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.email %>
-        <td><%= user.approved %>
-      </tr>
+
+
+<div> 
+  <%= search_form_for @user_search, url: users_path do |f| %>
+    <%= f.search_field :name_cont, class: 'form-control me-sm-2', id: "submit-form2"%>
+    <%= f.button :type => "submit", id: 'submit-btn2' do %>
+      <i class='fas fa-search'></i>
     <% end %>
-    </table>
+  <% end %>
+</div>
+
+<div>
+  <%= search_form_for @user_search, url: users_path do |f| %>
+
+    <%= f.label :男性 %>
+    <%= f.radio_button :gender_eq,0, {:checked => true} %>
+    <%= f.label :女性 %>
+    <%= f.radio_button :gender_eq,1%>
+
+    <%= f.submit class: 'btn btn-primary' %>
+
+
+  <% end %>
+</div>
+
+<div class="container user_result" style="">
+  <% @user_results.reverse_each do |user| %>
+      <section class="card3">
+        <%= link_to user_path(user), class: " text-dark" do %>
+        <div class="card-img3"><%= image_tag(user.image.variant(gravity: :center, resize:"640x400^", crop:"640x640+0+0").processed, class: "img-fluid") %></div>
+        <div class="card-content3">
+          <h1 class="card-title3"><%= user.name %></h1>
+          <p class="card-text3">WebデザインやWebサイト制作、最新のWeb業界情報などを紹介していくサイト。</p>
+        </div>
+        <% end %>
+      </section>
+  <% end %>
+</div>
