--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -18,7 +18,7 @@
   </ul>
 
   <% if @user.id == current_user.id %>
-    <div class="text-right"><%= link_to "メンバーを追加する", new_user_post_path(@user) %></div>
+    <div class="text-right"><%= link_to "ムービーを追加する", new_user_video_path(@user) %></div>
   <% end %>
   
 <!- メンバー一覧 ->
