--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -5,7 +5,7 @@
       <%= f.text_field :title %>
     </div>
     <div class="form-group">
-    <%= f.label :youtube_url, '本文' %>
+    <%= f.label :youtube_url, 'url' %>
       <%= f.text_field :youtube_url %>
     </div>
     <%= f.submit %>
