--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -97,3 +97,51 @@
      font-size: 50px;
      margin-left: 140px;
    }
+
+   //event show
+   .event_title_show{
+     font-size: 70px;
+   }
+
+   .event_body_show{
+     font-size: 50px;
+   }
+
+   .event{
+     font-size: 40px;
+     margin-left: 180px;
+   }
+
+   .event_time{
+    font-size: 40px;
+    margin-left: 230px;
+  }
+
+   .event_starttime{
+     font-size: 35px;
+     margin-left: 180px;
+   }
+
+
+   .event_area_show{
+    font-size: 35px;
+    margin-left: 150px;
+   }
+
+    .event_remarks{
+     font-size: 40px;
+     margin-left: 270px;
+   }
+
+   .event_remarks_text{
+     max-width: 700px;
+     font-size: 35px;
+     margin-left: 100px;
+   }
+   
+   .container_remarks{
+     display: flex;
+   }
+
+   //画像投稿ボタン
+  
