--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,5 +1,13 @@
-<% if current_user.already_liked?(@post) %>
-  <%= button_to 'いいね♡', user_post_like_path(@user, @post), class: 'btn btn-warning', method: :delete, remote: true %>
+<% if post.event? %>
+  <% if current_user.already_liked?(@post) %>
+    <%= button_to '参加取り消し', user_post_like_path(@user, @post), class: 'btn btn-warning', method: :delete, remote: true %>
+  <% else %>
+    <%= button_to '参加', user_post_likes_path(@user, @post), class: 'btn btn-outline-dark', remote: true %>
+  <% end %>
 <% else %>
-  <%= button_to 'いいね♡', user_post_likes_path(@user, @post), class: 'btn btn-outline-dark', remote: true %>
+  <% if current_user.already_liked?(@post) %>
+    <%= button_to 'いいね♡', user_post_like_path(@user, @post), class: 'btn btn-warning', method: :delete, remote: true %>
+  <% else %>
+    <%= button_to 'いいね♡', user_post_likes_path(@user, @post), class: 'btn btn-outline-dark', remote: true %>
+  <% end %>
 <% end %>
