--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -58,10 +58,11 @@
           <p class="card-text">WebデザインやWebサイト制作、最新のWeb業界情報などを紹介していくサイト。</p>
         </div>
         <% end %>
-      
       </section>
-      
     <% end %>
   <% end %>
+  <div class="text-center">
+  <%= paginate @results %>
+  </div>
 </div>
 
