--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -31,7 +31,6 @@
 
 .button1 {
     list-style: none;
-    display: -webkit-flex;
     display: flex;
     -webkit-justify-content: flex-start;
     justify-content: flex-start;
@@ -39,7 +38,6 @@
 }
 
 .button1 li{
-  -webkit-flex-grow: 1;
   flex-grow: 1;
 }
 
@@ -65,38 +63,35 @@
 
 
   // 横並びスライド
-  .sample ul{
-    padding: 0px;
-    overflow-x: auto;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-  }
+  
 
-  .sample li{
+  .swiper_img{
     display: inline-block;
-    width: 30%;
+    width: 1200px;
     height: 300px;
-    margin: 16px;
-    padding: 7px;
+  
     background: #e1f3ff;
   }
   
   .font4{
     font-weight: bold;
     font-size: 35px;
-    
+    width: 1120px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    width: 1120px;
+    
     border-bottom: thick double #741c9c;
 }
 
 
-.member {
+.member1 {
 	display: flex;
   flex-wrap: wrap;
-  margin: 25px;
+  width: 1160px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0px;
 }
 
 
